[package]
name = "ssd1327"
version = "0.2.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
edition = "2018"
categories = ["embedded", "no-std"]
description = "I2C driver for the SSD1327 OLED display controller"
documentation = "https://docs.rs/ssd1327"
keywords = ["no-std", "ssd1327", "oled", "embedded", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/daschl/ssd1327"

[dependencies]
display-interface = "0.5"
embedded-graphics-core = "0.4"
embedded-hal = "1.0.0"

[dev-dependencies]
rppal = { version = "0.19", features = [ "hal" ] }
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
linux-embedded-hal = "0.4.0"
